# chess

./: .dockerignore  .env.example  .gitignore  README.md  biome.json  docker-compose.yml  flake.nix  justfile  package-lock.json  package.json  turbo.json
application/: .dockerignore  .gitignore  Dockerfile  biome.json  chess.db  debug-db.js  drizzle.config.ts  package.json  vite.config.ts
application/.output/: nitro.json
application/.output/server/: index.mjs  package.json
application/drizzle/: 0000_medical_shiva.sql  0001_grey_black_knight.sql
application/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
application/src/: entry-client.tsx  entry-server.tsx  routeTree.gen.ts  router.tsx  styles.css
application/src/components/: header.tsx
application/src/db/: index.ts  schema.ts
application/src/lib/: api.ts  chess.ts  game-api.ts  index.ts  query.ts
apps/api/: drizzle.config.ts  package.json  tsconfig.json
apps/api/src/: index.ts
apps/engine/: package.json
apps/web/: .cta.json  Dockerfile  drizzle.config.ts  package.json  vite.config.ts
backend/: Cargo.toml  Game.cpp  Pieces.cpp  board.cpp  chess.c  chess.db
backend/src/: bitboard.rs  board.rs  db.rs  main.rs  types.rs
desktop/: package-lock.json  package.json
docker/: .env  .env.example
docker/dev/: api.Dockerfile  docker-compose.yml  engine.Dockerfile  web.Dockerfile
engine/: Cargo.toml  Dockerfile
engine/src/: bitboard.rs  board.rs  main.rs  types.rs
frontend/: package.json
frontend-legacy/src/: app.tsx
frontend/src/: Board.tsx  app.css
src/: main.tsx
(+125 files in other folders)
